--- a/packages/ui/src/components/file.css
+++ b/packages/ui/src/components/file.css
@@ -1,5 +1,6 @@
 [data-component="file"] {
   content-visibility: auto;
+  contain-intrinsic-size: auto 300px;
 }
 
 [data-component="file"][data-mode="text"] {
